--- a/app.json
+++ b/app.json
@@ -31,6 +31,14 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "7f7235dc-94be-4158-a7a3-9fb29d4164c0"
+      }
     }
   }
 }
